changes: tracking modal icon alignment fixes

--- a/src/components/order/order_new.css
+++ b/src/components/order/order_new.css
@@ -136,7 +136,7 @@
     color: #33cb81;
     /* line-height: 1.25rem */
     /* line-height: 1.65rem */
-    line-height: 2.5rem;
+    line-height: 2.7rem;
 }
 
 .step-completed .step-indicator .feather,
